--- a/templates/FinancialReporting/researcher_list.html
+++ b/templates/FinancialReporting/researcher_list.html
@@ -14,11 +14,19 @@
     </tr>
   <thead>
   <tbody>
-    {% for person in object_list %}
+    {% for person in researcher_list %}
       <tr>
         <td>{{ person.name }} {{ person.surname }}</td>
-        <td>{{ person.get_role_display }} </td>
+        <td>
+          {% for role in person.roles %}
+            {{ role.get_role_display }} from {{ role.start_date | date:"M d, Y" }}
+            <a href="{% url 'researcher_role_mod' researcher=person.id pk=role.id %}" aria-label="Modify"><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span></a>
+            <a href="{% url 'researcher_role_del' researcher=person.id pk=role.id %}" aria-label="Delete"><span class="glyphicon glyphicon-trash" aria-hidden="true"></span></a>
+            <br />
+          {% endfor %}
+        </td>
         <td class="col-actions">
+          <a href="{% url 'researcher_role_add' researcher=person.id %}" aria-label="Add role"><span class="glyphicon glyphicon-plus" aria-hidden="true"></span></a>
           <a href="{% url 'researcher_mod' pk=person.id %}" aria-label="Modify"><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span></a>
           <a href="{% url 'researcher_del' pk=person.id %}" aria-label="Delete"><span class="glyphicon glyphicon-trash" aria-hidden="true"></span></a>
         </td>
