Update of templates. New templates for AccountMangement. New templates for custom error pages.

--- a/templates/AccountManagement/login.html
+++ b/templates/AccountManagement/login.html
@@ -38,7 +38,7 @@
                     <a class="small" href="{% url 'account_password_reset' %}">Forgot Password?</a>
                 </div>
                 <div class="text-center">
-                    <a class="small" href="{% url 'account_register' %}">Create an Account!</a>
+                    <a class="small" href="{% url 'account_registration' %}">Create an Account!</a>
                 </div>
               </div>
             </div>
