--- a/templates/AccountManagement/passwordreset.html
+++ b/templates/AccountManagement/passwordreset.html
@@ -1,28 +1,40 @@
 {% extends "UdyniManagement/index.html" %}
+{% load crispy_forms_tags %}
 
-{% block menu %}
-{% include "UdyniManagement/menu.html" %}
-{% endblock %}
+{% block page %}
 
-{% block content %}
-<form action="" method="post">
-<table>
-{{ form.as_table }}
+<div class="container">
 
-<tbody>
-  <tr>
-    <th>
-      <label for="id_email">Email:</label>
-    </th>
-    <td>
-      <input type="email" name="email" autocomplete="email" maxlength="254" required="" id="id_email">
-    </td>
-  </tr>
-</tbody>
-</table>
-
-</form>
-
-
+  <!-- Outer Row -->
+  <div class="row justify-content-center">
+    <div class="col-md-9">
+      <div class="card o-hidden border-0 shadow-lg my-5">
+        <div class="card-body p-0">
+          <!-- Nested Row within Card Body -->
+          <div class="row">
+            <div class="col-lg-12">
+              <div class="p-5">
+                <div class="text-center">
+                  <h1 class="h4 text-gray-900 mb-4">{{ title }}</h1>
+                </div>
+                <form action="" method="post" id="form_reset">
+                  {% csrf_token %}
+                  <div>{{ form|crispy }}</div>
+                </form>
+                <button type="submit" form="form_reset" class="btn btn-primary btn-block" value="Reset">
+                  Reset
+                </button>
+                <hr>
+                <div class="text-center">
+                    <a class="small" href="{% url 'account_login' %}">Back to login page</a>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
 
 {% endblock %}
