--- a/templates/AccountManagement/registrationrequest_complete.html
+++ b/templates/AccountManagement/registrationrequest_complete.html
@@ -14,14 +14,16 @@
             <div class="col-lg-12">
               <div class="p-5">
                 <div class="text-center">
-                  <h1 class="h4 text-gray-900 mb-4">Password reset done</h1>
+                  <h1 class="h4 text-gray-900 mb-4">Registration complete</h1>
                 </div>
-                <div class="text-center">
-                  You will receive shortly an email with further instructions to reset you password.
+                <div class="text-justify">
+                  You registration request has been saved. You will receive shortly a confirmation email.
+                  Please follow the link contained within to verify your email address and submit you request
+                  for approval by the administrators.
                 </div>
                 <hr>
-                <div class="text-center">
-                    <a class="small" href="{% url 'account_login' %}">Back to login page</a>
+                <div class="text-center small">
+                  Already registered? Login <a href="{% url 'account_login' %}">here</a>
                 </div>
               </div>
             </div>
