--- a/templates/404.html
+++ b/templates/404.html
@@ -1,5 +1,5 @@
 {% extends "UdyniManagement/index.html" %}
-
+{% load static %}
 {% block page %}
 
 <div class="container">
@@ -13,15 +13,14 @@
           <div class="row">
             <div class="col-lg-12">
               <div class="p-5">
-                <div class="text-center">
-                  <h1 class="h4 text-gray-900 mb-4">Password reset done</h1>
+                <div class="d-flex flex-row">
+                  <img src="{% static 'img/yoda.svg' %}" />
                 </div>
                 <div class="text-center">
-                  You will receive shortly an email with further instructions to reset you password.
+                  <h1 class="h4 text-gray-900 mb-4">Occurred a 404 error has</h1>
                 </div>
-                <hr>
                 <div class="text-center">
-                    <a class="small" href="{% url 'account_login' %}">Back to login page</a>
+                  A disturbance in the force I sense. The dark side clouds everything. Impossible to see the page is.
                 </div>
               </div>
             </div>
