--- a/templates/AccountManagement/registration.html
+++ b/templates/AccountManagement/registration.html
@@ -1,5 +1,5 @@
 {% extends "UdyniManagement/index.html" %}
-
+{% load crispy_forms_tags %}
 {% block page %}
 
 <div class="container">
@@ -14,17 +14,20 @@
             <div class="col-lg-12">
               <div class="p-5">
                 <div class="text-center">
-                  <h1 class="h4 text-gray-900 mb-4">You successfully logged out</h1>
+                  <h1 class="h4 text-gray-900 mb-4">Registration to the Udyni Management Intranet</h1>
                 </div>
+                <form action="" id="registration" method="post">
+                  {% csrf_token %}
+                  <div>
+                    {{ form|crispy }}
+                  </div>
+                </form>
+                <button type="submit" form="registration" class="btn btn-primary btn-block" value="Register">
+                  Register
+                </button>
                 <hr>
-                <div class="text-center">
-                  <a class="small" href="{% url 'account_login' %}">Login</a>
-                </div>
-                <div class="text-center">
-                    <a class="small" href="{% url 'account_password_reset' %}">Forgot Password?</a>
-                </div>
-                <div class="text-center">
-                    <a class="small" href="{% url 'account_registration' %}">Create an Account!</a>
+                <div class="text-center small">
+                  Already registered? Login <a href="{% url 'account_login' %}">here</a>
                 </div>
               </div>
             </div>
