--- a/templates/Projects/project_list.html
+++ b/templates/Projects/project_list.html
@@ -1,12 +1,14 @@
 {% extends "UdyniManagement/page.html" %}
 {% block content %}
 
-<a href="{% url 'project_add' %}" class="btn btn-primary btn-icon-split mb-4" aria-label="Add project">
-  <span class="icon text-white-50">
-      <i class="fas fa-circle-plus"></i>
-  </span>
-  <span class="text">Add project</span>
-</a>
+{% if can_edit %}
+  <a href="{% url 'project_add' %}" class="btn btn-primary btn-icon-split mb-4" aria-label="Add project">
+    <span class="icon text-white-50">
+        <i class="fas fa-circle-plus"></i>
+    </span>
+    <span class="text">Add project</span>
+  </a>
+{% endif %}
 
 <div class="card mb-4">
   <div class="card-body table-responsive">
@@ -17,6 +19,7 @@
           <th>Agency</th>
           <th>Reference</th>
           <th>Principal investigator</th>
+          <th>Depreciation</th>
           <th>Sigla ID</th>
           <th>Workpackages</th>
           <th>Actions</th>
@@ -29,23 +32,28 @@
             <td>{{ project.agency }}</td>
             <td>{{ project.reference }}</td>
             <td>{{ project.pi }}</td>
+            <td>{{ project.depreciation }}</td>
             <td>{{ project.sigla_name }}</td>
             <td>
               {% if project.workpackages %}
                 {% for wp in project.workpackages %}
                   <div>
                     <b>{{ wp.name }}:</b> {{ wp.desc }}
-                    <a href="{% url 'wp_mod' pk=wp.id %}" aria-label="Modify"><i class="fas fa-pencil" aria-hidden="true"></i></a>
-                    <a href="{% url 'wp_del' pk=wp.id %}" aria-label="Delete"><i class="fas fa-trash-can" aria-hidden="true"></i></a>
+                    {% if can_edit %}
+                      <a href="{% url 'wp_mod' pk=wp.id %}" aria-label="Modify"><i class="fas fa-pencil" aria-hidden="true"></i></a>
+                      <a href="{% url 'wp_del' pk=wp.id %}" aria-label="Delete"><i class="fas fa-trash-can" aria-hidden="true"></i></a>
+                    {% endif %}
                   </div>
                 {% endfor %}
               {% endif %}
             </td>
 
             <td class="col-actions">
-              <a href="{% url 'project_mod' pk=project.id %}" aria-label="Modify"><i class="fas fa-pencil" aria-hidden="true"></i></a>
-              <a href="{% url 'project_del' pk=project.id %}" aria-label="Delete"><i class="fas fa-trash-can" aria-hidden="true"></i></a>
-              <a href="{% url 'wp_add_prj' project=project.id %}" aria-label="Add workpackage"><i class="fas fa-circle-plus" aria-hidden="true"></i></a>
+              {% if can_edit %}
+                <a href="{% url 'project_mod' pk=project.id %}" aria-label="Modify"><i class="fas fa-pencil" aria-hidden="true"></i></a>
+                <a href="{% url 'project_del' pk=project.id %}" aria-label="Delete"><i class="fas fa-trash-can" aria-hidden="true"></i></a>
+                <a href="{% url 'wp_add_prj' project=project.id %}" aria-label="Add workpackage"><i class="fas fa-circle-plus" aria-hidden="true"></i></a>
+              {% endif %}
             </td>
           </tr>
         {% endfor %}
