--- a/templates/UdyniManagement/generic_form.html
+++ b/templates/UdyniManagement/generic_form.html
@@ -5,7 +5,7 @@
 <div class="card mb-4">
   <div class="card-body">
 
-    <form action="" method="post">
+    <form action="" method="post"{% if enctype %} enctype="{{ enctype }}"{% endif %}>
     {% csrf_token %}
       <div>
         {{ form|crispy }}
@@ -15,7 +15,7 @@
           </span>
           <span class="text">Save</span>
         </button>
-        <a href="{% url back_url %}" aria-label="Cancel" class="btn btn-danger btn-icon-split">
+        <a href="{{ back_url }}" aria-label="Cancel" class="btn btn-danger btn-icon-split">
           <span class="icon text-white-50">
             <i class="fas fa-xmark"></i>
           </span>
