--- a/templates/UdyniManagement/page.html
+++ b/templates/UdyniManagement/page.html
@@ -47,17 +47,17 @@
             <!-- Dropdown - User Information -->
             <div class="dropdown-menu dropdown-menu-right shadow animated--grow-in"
               aria-labelledby="userDropdown">
-              <a class="dropdown-item" href="#">
+              <a class="dropdown-item" href="{% url 'account_profile' %}">
                 <i class="fas fa-user fa-sm fa-fw mr-2 text-gray-400"></i>
                 Profile
               </a>
-              <a class="dropdown-item" href="#">
-                <i class="fas fa-cogs fa-sm fa-fw mr-2 text-gray-400"></i>
-                Settings
+              <a class="dropdown-item" href="{% url 'account_password_change' %}">
+                <i class="fas fa-key fa-sm fa-fw mr-2 text-gray-400"></i>
+                Change password
               </a>
-              <a class="dropdown-item" href="#">
-                <i class="fas fa-list fa-sm fa-fw mr-2 text-gray-400"></i>
-                Activity Log
+              <a class="dropdown-item" href="{% url 'account_users' %}">
+                <i class="fas fa-users fa-sm fa-fw mr-2 text-gray-400"></i>
+                User list
               </a>
               <div class="dropdown-divider"></div>
               <a class="dropdown-item" href="#" data-toggle="modal" data-target="#logoutModal">
@@ -77,7 +77,7 @@
 
         <!-- Page Heading -->
         <div class="d-sm-flex align-items-center justify-content-between mb-4">
-            <h1 class="h3 mb-0 text-gray-800">{{ title }}</h1>
+          <h1 class="h3 mb-0 text-gray-800">{{ title }}</h1>
         </div>
 
         {% block content %}
@@ -95,7 +95,7 @@
     <footer class="sticky-footer bg-white">
         <div class="container my-auto">
             <div class="copyright text-center my-auto">
-                <span>Copyright &copy; Your Website 2021</span>
+                <span>Copyright &copy; UDynI 2021</span>
             </div>
         </div>
     </footer>
@@ -125,7 +125,7 @@
       <div class="modal-body">Select "Logout" below to end your current session.</div>
       <div class="modal-footer">
         <button class="btn btn-secondary" type="button" data-dismiss="modal">Cancel</button>
-        <a class="btn btn-primary" href="{% url 'account_login' %}">Logout</a>
+        <a class="btn btn-primary" href="{% url 'account_logout' %}">Logout</a>
       </div>
     </div>
   </div>
