--- a/templates/Accounting/gae_list.html
+++ b/templates/Accounting/gae_list.html
@@ -16,6 +16,7 @@
           <th>Project</th>
           <th>Name</th>
           <th>Description</th>
+          <th>Included in funding</th>
           <th>Actions</th>
         </tr>
       <thead>
@@ -25,6 +26,17 @@
             <td>{{ gae.project }}</td>
             <td>{{ gae.name }}</td>
             <td>{{ gae.description }}</td>
+            <td>
+              {% if gae.splitcontab_set.all.count %}
+                <span class="text-warning ml-4"><i class="fas fa-check" aria-hidden="true"></i><span class="sr-only">Included</span></span>
+              {% else %}
+                {% if gae.include_funding %}
+                  <span class="text-success ml-4"><i class="fas fa-check" aria-hidden="true"></i><span class="sr-only">Included</span></span>
+                {% else %}
+                  <span class="text-danger ml-4"><i class="fas fa-xmark" aria-hidden="true"></i><span class="sr-only">Included</span></span>
+                {% endif %}
+              {% endif %}
+            </td>
             <td class="col-actions">
               <a href="{% url 'acc_gae_mod' pk=gae.id %}" aria-label="Modify"><i class="fas fa-pencil" aria-hidden="true"></i></a>
               <a href="{% url 'acc_gae_del' pk=gae.id %}" aria-label="Delete"><i class="fas fa-trash-can" aria-hidden="true"></i></a>
