BugFix: in timesheet generation internal activities cells where marked editable

--- a/templates/Reporting/timesheet_generate.html
+++ b/templates/Reporting/timesheet_generate.html
@@ -144,7 +144,7 @@
           }
           if(p.days[k].mission)
             s.addClass("missionday");
-          else
+          else if(p.id != -1)
             s.addClass("editable-cell");
         }
       }
