--- a/templates/UdyniManagement/menu.html
+++ b/templates/UdyniManagement/menu.html
@@ -21,7 +21,7 @@
           </div>
         </div>
       {% else %}
-        <a class="nav-link" href="{{ section.link }}">
+        <a class="nav-link" href="{{ section.link }}"{% if section.target %} target="{{ section.target }}"{% endif %}>
           <i class="fas {{ section.icon }}"></i>
           <span>{{ section.name }}</span>
         </a>
