Cleanup: removed spurious imports, fixed User model import in projects, fixed menu icons.

--- a/templates/UdyniManagement/menu.html
+++ b/templates/UdyniManagement/menu.html
@@ -9,7 +9,11 @@
     <li class="nav-item{% if section.active %} active{% endif %}">
       {% if section.subsections %}
         <a class="nav-link{% if not section.active %} collapsed{% endif %}" href="#" data-toggle="collapse" data-target="#collapse_{{ section.id }}" aria-expanded="true" aria-controls="collapse_{{ section.id }}">
-          <i class="fas fa-fw {{ section.icon }}"></i>
+          {% if section.icon %}
+            <i class="fa-fw {{ section.icon }}"></i>
+          {% else %}
+            <i class="fa-fw fa-solid fa-puzzle-piece"></i>
+          {% endif %}
           <span>{{ section.name }}</span>
         </a>
         <div id="collapse_{{ section.id }}" class="collapse{% if section.active %} show{% endif %}" aria-labelledby="heading_{{ section.id }}" data-parent="#accordionSidebar">
@@ -22,7 +26,11 @@
         </div>
       {% else %}
         <a class="nav-link" href="{{ section.link }}"{% if section.target %} target="{{ section.target }}"{% endif %}>
-          <i class="fas {{ section.icon }}"></i>
+          {% if section.icon %}
+            <i class="fa-fw {{ section.icon }}"></i>
+          {% else %}
+            <i class="fa-fw fa-solid fa-puzzle-piece"></i>
+          {% endif %}
           <span>{{ section.name }}</span>
         </a>
       {% endif %}
