Generalized ajax forms

--- a/templates/UdyniManagement/index.html
+++ b/templates/UdyniManagement/index.html
@@ -57,6 +57,9 @@
   <!-- Menu script -->
   <script src="{% static 'js/udyni-menu.js' %}"></script>
 
+  <!-- Ajax forms -->
+  <script src="{% static 'js/udyni_ajax_forms.js' %}"></script>
+
   <!-- Select2 (https://select2.org/) -->
   <script src="{% static 'js/select2-4.0.13.full.min.js' %}"></script>
 
