Fixed upstream issue #4 and #5. Added functionality for reporting new researchers and indication of available hours.

--- a/static/css/udyni.css
+++ b/static/css/udyni.css
@@ -116,3 +116,7 @@ table.timesheet td.editable-cell {
 table.timesheet td.modified {
   background-color: aquamarine !important;
 }
+
+table.table-reporting {
+  font-size: 10pt;
+}
