Fixed error handling in the SplitAccounting view to add 'impegni' to a SplitAccount.

--- a/templates/Accounting/splitimpegno_add.html
+++ b/templates/Accounting/splitimpegno_add.html
@@ -49,6 +49,16 @@
   </div>
 </div>
 
+<div class="card border-left-danger mb-2" role="alert" id="error-message-box" style="display:none">
+  <div class="card-body d-flex flex-row p-2 align-items-center">
+    <div class="p-2">
+      <i class="fas fa-triangle-exclamation text-lg text-danger" aria-hidden="true"></i>
+      <span class="sr-only">Error:</span>
+    </div>
+    <div class="d-flex flex-column p-2" id="error-message-box-content"></div>
+  </div>
+</div>
+
 {% endblock %}
 
 {% block page-javascript %}
@@ -68,7 +78,12 @@ $(document).ready(function() {
             window.location.href = "{% url 'acc_split_contab_detail' pk=view.kwargs.pk %}";
           } else {
             // Handle errors
-
+            root = $("#error-message-box-content");
+            root.html("");
+            for (let i = 0; i < data.errors.length; i++) {
+              root.append($('<div class="text">' + data.errors[i] + '</div>'));
+            }
+            $("#error-message-box").show();
           }
         },
     });
