--- a/templates/LabLogbook/experimentalstation_list.html
+++ b/templates/LabLogbook/experimentalstation_list.html
@@ -3,20 +3,20 @@
 {% block content %}
 
 {% if can_edit %}
-<a href="{% url 'experimentalstation_add' %}" class="btn btn-primary btn-icon-split mb-4" aria-label="Add experimental station">
+<a href="{% url 'experimentalstation_add' %}" class="btn btn-primary btn-icon-split mb-4" aria-label="Add experimental stationa">
   <span class="icon text-white-50">
       <i class="fas fa-circle-plus"></i>
   </span>
-  <span class="text">Add experimental station</span>
+  <span class="text">Add experimental stationa</span>
 </a>
 {% endif %}
 
 {% regroup object_list by laboratory as laboratory_list %}
 
-{% for experimentalstations in laboratory_list %}
+{% for group in laboratory_list %}
   <div class="card shadow mb-4">
     <div class="card-header">
-      <h6 class="m-0 font-weight-bold text-primary">{{ experimentalstation.grouper }}</h6>
+      <h6 class="m-0 font-weight-bold text-primary">{{ group.grouper }}</h6>
     </div>
     <div class="card-body table-responsive">
       <table cellspacing="0" cellpadding="0" class="table table-sm table-hover reporting">
@@ -26,15 +26,16 @@
             <th>Description</th>
             <th>Responsible</th>
             <th>Status</th>
+            <th>Actions</th>
           </tr>
-        <thead>
+        </thead>
         <tbody>
-          {% for experimentalstation in experimentalstation.list %}
+          {% for experimentalstation in group.list %}
             <tr>
               <td>{{ experimentalstation.name }}</td>
-              <td>{{ experimentalstation.description}}</td>
-              <td>{{ experimentalstation.responsible}}</td>
-              <td>{{ experimentalstation.status}} / h</td>
+              <td>{{ experimentalstation.description }}</td>
+              <td>{{ experimentalstation.responsible }}</td>
+              <td>{{ experimentalstation.status }}</td>
               <td class="col-actions">
                 {% if perms.Reporting.costs_manage %}
                   <a href="{% url 'experimentalstation_mod' pk=experimentalstation.station_id %}" aria-label="Modify"><i class="fas fa-pencil" aria-hidden="true"></i></a>
@@ -48,5 +49,6 @@
     </div>
   </div>
 {% endfor %}
+
 
 {% endblock %}
