--- a/templates/LabLogbook/experimentalstation_list.html
+++ b/templates/LabLogbook/experimentalstation_list.html
@@ -7,7 +7,7 @@
   <span class="icon text-white-50">
       <i class="fas fa-circle-plus"></i>
   </span>
-  <span class="text">Add experimental stationa</span>
+  <span class="text">Add experimental station</span>
 </a>
 {% endif %}
 
