added Actions as title of actions column

--- a/templates/LabLogbook/laboratory_list.html
+++ b/templates/LabLogbook/laboratory_list.html
@@ -18,6 +18,7 @@
           <th>Name</th>
           <th>Description</th>
           <th>Location</th>
+          <th>Actions</th>
         </tr>
       </thead>
       <tbody>
