--- a/templates/LabLogbook/sample_list.html
+++ b/templates/LabLogbook/sample_list.html
@@ -18,7 +18,7 @@
           <th>Name</th>
           <th>Material</th>
           <th>Substrate</th>
-          <th>Manifacturer</th>
+          <th>Manufacturer</th>
           <th>Description</th>
           <th>Reference</th>
           <th>Author</th>
@@ -31,7 +31,7 @@
             <td>{{ sample.name }}</td>
             <td>{{ sample.material }}</td>
             <td>{{ sample.substrate }}</td>
-            <td>{{ sample.manifacturer }}</td>
+            <td>{{ sample.manufacturer }}</td>
             <td>{{ sample.description }}</td>
             <td>{{ sample.reference }}</td>
             <td>{{ sample.author }}</td>
