--- a/templates/LabLogbook/experimentalstation_list.html
+++ b/templates/LabLogbook/experimentalstation_list.html
@@ -40,8 +40,8 @@
                   <a href="{% url 'experimentalstation_mod' pk=experimentalstation.station_id %}" aria-label="Modify"><i class="fas fa-pencil" aria-hidden="true"></i></a>
                   <a href="{% url 'experimentalstation_del' pk=experimentalstation.station_id %}" aria-label="Delete"><i class="fas fa-trash-can" aria-hidden="true"></i></a>
                 {% endif %}
-                {% if perms.Experiments.costs_manage %} {# TODO: EDIT THIS BEFORE COMMITTING!!!!!!!! #}
-                  <a href="{% url 'experimentalstation_mod' pk=experimentalstation.station_id %}"  class="btn btn-sm btn-primary btn-icon-split" aria-label="Show experiments">
+                {% if perms.Experiments.costs_manage %}
+                  <a href="{% url 'experiment_view' station_id=experimentalstation.station_id %}"  class="btn btn-sm btn-primary btn-icon-split" aria-label="Show experiments">
                     <span class="icon text-white-50">
                       <i class="fas fa-arrow-right"></i>
                     </span>
