--- a/templates/LabLogbook/experiment_list.html
+++ b/templates/LabLogbook/experiment_list.html
@@ -1,6 +1,13 @@
 {% extends "UdyniManagement/page.html" %}
 {% block content %}
 
+<a href="{% url 'experimentalstation_view' %}"  class="btn btn-primary btn-icon-split mb-4" aria-label="Go back to Experimental Stations">
+  <span class="icon text-white-50">
+    <i class="fas fa-arrow-left"></i>
+  </span>
+  <span class="text">Go back to Experimental Stations</span>
+</a>
+
 {% if can_edit %}
 <a href="{% url 'experiment_add' station_id=this_station_id %}" class="btn btn-primary btn-icon-split mb-4" aria-label="Add experiment for this experimental station">
   <span class="icon text-white-50">
