--- a/templates/LabLogbook/sample_list.html
+++ b/templates/LabLogbook/sample_list.html
@@ -37,8 +37,8 @@
             <td>{{ sample.author }}</td>
             <td class="col-actions">
               {% if can_edit %}
-                <a href="{% url 'sample_mod' sample_id=sample.sample_id %}" aria-label="Modify"><i class="fas fa-pencil" aria-hidden="true"></i></a>
-                <a href="{% url 'sample_del' sample_id=sample.sample_id %}" aria-label="Delete"><i class="fas fa-trash-can" aria-hidden="true"></i></a>
+                <a href="{% url 'sample_mod' pk=sample.sample_id %}" aria-label="Modify"><i class="fas fa-pencil" aria-hidden="true"></i></a>
+                <a href="{% url 'sample_del' pk=sample.sample_id %}" aria-label="Delete"><i class="fas fa-trash-can" aria-hidden="true"></i></a>
               {% endif %}
             </td>
           </tr>
